--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.mrkumar.workoutapp"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -36,6 +37,16 @@ android {
 }
 
 dependencies {
+    def room_version = '2.5.1'
+    def activityVersion = '1.7.0'
+    // Room and Lifecycle dependencies
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    //kotlin extensions for coroutine support with room
+    implementation("androidx.room:room-ktx:$room_version")
+
+    //kotlin extension for coroutine support with activities
+    implementation "androidx.activity:activity-ktx:$activityVersion"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
